Change made by Chirag at 00:37

--- a/CAT_CARE.html
+++ b/CAT_CARE.html
@@ -37,7 +37,7 @@
                     <img src="PIC_FOR_PROJECTS/Cat_care_feeding_02.jpg" alt="pic" height="300px">
                 </div>
                 <p>
-                    We recommend purchasing high-quality, brand-name kitten or cat food. Your veterinarian will be able to assess your new cat or kitten and determine the best diet. Factors such as age, activity level and health make a difference in what and how much a cat should eat.
+                    We recommend purchasing only and only high-quality, brand-name kitten or cat food. Your veterinarian will be able to assess your new cat or kitten and determine the best diet. Factors such as age, activity level and health make a difference in what and how much a cat should eat.
                 </p>
                 <ul>
                     <li>
