commit changes in Home.html page by Chirag Garg

--- a/HOME.HTML
+++ b/HOME.HTML
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html lang="en-US">
    <head>
@@ -26,7 +27,8 @@
            <div id="one">
             <p>You and your pet are here for each other through thick and thin.</p>  <br><br>
             <p> We're here for both of you.</p>
-            <br><br><br>
+	    <p>This is the change commited by CHirg during SCM Project 2022.</p>
+	    <br><br>
             <span>
                "No matter how little money and how few
                 possessions you own ,having a pet makes 
