i have made the changes

--- a/HOME.HTML
+++ b/HOME.HTML
@@ -26,7 +26,9 @@
        
            <div id="one">
             <p>You and your pet are here for each other through thick and thin.</p>  <br><br>
-            <p> We're here for both of you.</p>
+            <p> i am here for both of you
+
+	.</p>
 	    <p>This is the change commited by CHirg during SCM Project 2022.</p>
 	    <br><br>
             <span>
