changes made by me in third lecture

--- a/ZIRAKPUR.html
+++ b/ZIRAKPUR.html
@@ -19,7 +19,7 @@
         #HOURS
             {
                 background-color: #233142;
-                color: white;
+                color: black;
             }
         DIV
             {
